# flow

./: .gitignore  Axis.cpp  Axis.h  CMakeLists.txt  CorrectionInterface.cpp  CorrectionInterface.h  CorrectionManager.cpp  CorrectionManager.h  CorrectionTask.cpp  CorrectionTask.h  CorrectionsInterface.cpp  CorrectionsInterface.h  Correlation.cpp  Correlation.h  CorrelationManager.cpp  CorrelationManager.h  CorrelationTask.cpp  CorrelationTask.h  Correlator.h  DataContainer.cpp  DataContainer.h  DataContainerHelper.h  DataFiller.cpp  DataFiller.h  DataInterface.cpp  DataInterface.h  DataVector.cpp  DataVector.h  Detector.h  DetectorConfig.cpp  DetectorConfig.h  DetectorFactory.cpp  DetectorFactory.h  DetectorGenerator.cpp  DetectorGenerator.h  DetectorMap.cpp  DetectorMap.h  EventInfo.cpp  EventInfo.h  LICENSE  (+44 more)
Base/: Axis.cpp  Axis.h  BaseLinkDef.h  DataContainer.cpp  DataContainer.h  DataContainerHelper.cpp  DataContainerHelper.h  DataVector.cpp  DataVector.h  Efficiency.cpp  Efficiency.h  EventShape.cpp  EventShape.h  Hist.cpp  Hist.h  Profile.cpp  Profile.h  QVector.cpp  QVector.h  ReSamples.cpp  ResultContainer.cpp  ResultContainer.h  Sample.cpp  Sample.h  Statistic.cpp  Stats.cpp  Stats.h  SubSamples.cpp
Base/include/: AxesConfiguration.h  Axis.h  BackPorts.h  CorrelationResult.h  Cuts.h  DataContainer.h  DataContainerHelper.h  DataVector.h  EqualEntriesBinner.h  EventShape.h  Product.h  Profile.h  QVector.h  (+7 more)
Correction/: Alignment.cpp  CorrectionCalculator.cpp  CorrectionHistogramBase.cpp  CorrectionHistogramChannelizedSparse.cpp  CorrectionHistogramSparse.cpp  CorrectionLinkDef.h  CorrectionManager.cpp  CorrectionProfile3DCorrelations.cpp  CorrectionProfileChannelized.cpp  CorrectionProfileChannelizedIngress.cpp  CorrectionProfileComponents.cpp  CorrectionProfileCorrelationComponents.cpp  Detector.cpp  GainEqualization.cpp  QAHistogram.cpp  Recentering.cpp  SubEvent.cpp  SubEventChannels.cpp  SubEventTracks.cpp  TwistAndRescale.cpp
Correlation/: BootstrapSampler.cpp  BootstrapSampler.h  CCorrelation.cpp  Correlation.cpp  Correlation.h  CorrelationHolder.cpp  CorrelationHolder.h  CorrelationLinkDef.h  CorrelationManager.cpp  CorrelationManager.h  Correlator.cpp  Correlator.h  ESE.cpp  EseHandler.cpp  EseSubEvent.cpp  EventAxes.cpp  EventShapeResult.cpp  EventVariables.cpp  Sampler.cpp  Sampler.h  StatsResult.cpp
DataFrame/: FlowDataFrame.h
DataFrameCorrelation/: DataFrameCorrelationLinkDef.h
DifferentialCorrection/: CorrectionManager.cpp  CorrectionManager.h  Detector.cpp  Detector.h  DiffCorrLinkDef.h  EventInfo.cpp  EventInfo.h  HistogramManager.cpp  HistogramManager.h  QAHistogram.cpp  QAHistogram.h  VariableCutBase.cpp  VariableCutBase.h  VariableManager.cpp  VariableManager.h
QnCorrections/: Alignment.cpp  CMakeLists.txt  CorrectionCalculator.cpp  CorrectionDataVector.cpp  CorrectionDataVectorChannelized.cpp  CorrectionDetector.cpp  CorrectionDetectorConfigurationsSet.cpp  CorrectionHistogram.cpp  CorrectionHistogramBase.cpp  CorrectionHistogramChannelized.cpp  CorrectionHistogramChannelizedSparse.cpp  CorrectionHistogramSparse.cpp  CorrectionLog.cpp  CorrectionOnInputData.cpp  CorrectionOnQvector.cpp  CorrectionProfile.cpp  CorrectionProfile3DCorrelations.cpp  CorrectionProfileChannelized.cpp  CorrectionProfileChannelizedIngress.cpp  CorrectionProfileComponents.cpp  CorrectionProfileCorrelationComponents.cpp  CorrectionProfileCorrelationComponentsHarmonics.cpp  CorrectionQnVector.cpp  CorrectionQnVectorBuild.cpp  CorrectionStepBase.cpp  CorrectionsSetOnInputData.cpp  CorrectionsSetOnQvector.cpp  CutAbove.cpp  CutBelow.cpp  CutOutside.cpp  CutSetBit.cpp  CutValue.cpp  CutWithin.cpp  CutsBase.cpp  CutsSet.cpp  DetectorConfiguration.cpp  DetectorConfigurationChannels.cpp  DetectorConfigurationTracks.cpp  EventClassVariable.cpp  EventClassVariablesSet.cpp  (+47 more)
QnCorrections/include/: Alignment.h  CorrectionCalculator.h  CorrectionDataVector.h  CorrectionDataVectorChannelized.h  CorrectionDetector.h  CorrectionHistogram.h  CorrectionHistogramBase.h  CorrectionHistogramChannelized.h  CorrectionHistogramChannelizedSparse.h  CorrectionHistogramSparse.h  CorrectionLog.h  CorrectionOnInputData.h  CorrectionOnQvector.h  CorrectionProfile.h  CorrectionProfile3DCorrelations.h  CorrectionProfileChannelized.h  CorrectionProfileChannelizedIngress.h  CorrectionProfileComponents.h  CorrectionProfileCorrelationComponents.h  CorrectionProfileCorrelationComponentsHarmonics.h  CorrectionQnVector.h  CorrectionQnVectorBuild.h  CorrectionStep.h  CorrectionStepBase.h  CorrectionsSet.h  CorrectionsSetOnInputData.h  CorrectionsSetOnQvector.h  CutAbove.h  CutBelow.h  CutOutside.h  CutSetBit.h  CutValue.h  CutWithin.h  CutsBase.h  CutsSet.h  DetectorConfiguration.h  DetectorConfigurationChannels.h  DetectorConfigurationTracks.h  DetectorConfigurationsSet.h  EventClassVariable.h  (+32 more)
ReducedEvent/: AliReducedBaseEvent.h  AliReducedBaseTrack.h  AliReducedEventCut.cpp  AliReducedEventCut.h  AliReducedEventInfo.h  AliReducedInfoCut.h  AliReducedTrackCut.cpp  AliReducedTrackCut.h  AliReducedVarCut.cpp  AliReducedVarCut.h  AliReducedVarManager.cpp  AliReducedVarManager.h  CMakeLists.txt  ReducedEventLinkDef.h
ToyMC/: ChannelDetector.cpp  ParticleGenerator.cpp
cmake/: QnConfig.cmake  QnConfig.cmake.in
docs/: GLOSSARY.md  README.md  SUMMARY.md  building-flow.md  todo.md  using-flow.md
reducedevent/: AliReducedBaseEvent.cxx  AliReducedBaseEvent.h  AliReducedBaseTrack.cxx  AliReducedBaseTrack.h  AliReducedVarManager.h  CMakeLists.txt  RedLinkDef.h
test/: BootstrapSamplerUnitTest.cpp  CMakeLists.txt  CorrectionUnitTest.cpp  CorrelationHolderUnitTest.cpp  CorrelationManagerUnitTest.cpp  CorrelationUnitTest.cpp  CorrelatorUnitTest.cpp  DataContainerUnitTest.cpp  DataFrameAlgorithmUnitTest.cpp  EfficiencyUnitTest.cpp  HistUnitTest.cpp  ParticleGeneratorUnitTest.cpp  ProductUnitTest.cpp  ProfileUnitTest.cpp  QAHistogramUnitTest.cpp  QVectorUnitTest.cpp  ReSampleUnitTest.cpp  ResultContainerUnitTest.cpp  SampleUnitTest.cpp  StatisticUnitTest.cpp  StatsUnitTest.cpp  VarManagerUnitTest.cpp  maintest.cpp
(+83 files in other folders)
